--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,13 @@
 {
   "editor.formatOnSave": false,
-  "eslint.autoFixOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
   "eslint.validate": [
     "javascript",
     "javascriptreact",
-    {
-      "language": "typescript",
-      "autoFix": true
-    },
-    {
-      "language": "typescriptreact",
-      "autoFix": true
-    }
+    "typescript",
+    "typescriptreact"
   ],
   "files.exclude": {
     "**/node_modules": true,
