add eslint ignore config to package.json

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
       "style": "module-scoped"
     }
   },
+  "eslintIgnore": [
+    "/**/*.js"
+  ],
   "dependencies": {
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.4",
