tsconfig specify Node resolution strategy

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
+    "module": "CommonJS",
     "moduleResolution": "node",
     "baseUrl": "src",
     "sourceMap": true,
