unhide dist output

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,8 +11,7 @@
     "typescriptreact"
   ],
   "files.exclude": {
-    "**/node_modules": true,
-    "**/dist": true
+    "**/node_modules": true
   },
   "typescript.tsdk": "node_modules/typescript/lib"
 }
