--- a/package.json
+++ b/package.json
@@ -21,22 +21,22 @@
     "/**/*.js"
   ],
   "dependencies": {
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.3",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "eslint": "^7.12.0",
-    "eslint-config-prettier": "^6.14.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "import-sort": "^6.0.0",
-    "import-sort-cli": "^6.0.0",
-    "import-sort-parser-typescript": "^6.0.0",
-    "import-sort-style-module-scoped": "^1.0.3",
-    "jest": "^26.6.1",
-    "prettier": "^2.1.2",
-    "prettier-plugin-import-sort": "^0.0.6",
-    "ts-jest": "^26.4.2",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "@types/jest": "26.0.15",
+    "@types/node": "14.14.3",
+    "@typescript-eslint/eslint-plugin": "4.5.0",
+    "@typescript-eslint/parser": "4.5.0",
+    "eslint": "7.12.0",
+    "eslint-config-prettier": "6.14.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "import-sort": "6.0.0",
+    "import-sort-cli": "6.0.0",
+    "import-sort-parser-typescript": "6.0.0",
+    "import-sort-style-module-scoped": "1.0.3",
+    "jest": "26.6.1",
+    "prettier": "2.1.2",
+    "prettier-plugin-import-sort": "0.0.6",
+    "ts-jest": "26.4.2",
+    "ts-node": "9.0.0",
+    "typescript": "4.0.3"
   }
 }
