--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     ],
     "outDir": "dist",
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "isolatedModules": true,
+    "resolveJsonModule": true
   }
 }
