--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
   "name": "ts-boilerplate",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "dist/index.js",
   "license": "UNLICENSED",
   "private": true,
+  "type": "module",
+  "author": "danitt <dan@staykind.io>",
+  "engines": {
+    "node": ">=18.20.4 <19",
+    "npm": ">=10"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/danitt/ts-boilerplate.git"
+  },
   "scripts": {
-    "start": "ts-node src/index",
-    "build": "tsc",
-    "lint": "eslint src/**",
+    "start": "tsx src/index",
+    "build": "npm run clean && tsc --project tsconfig.build.json",
+    "clean": "rm -rf dist",
+    "format": "npm run lint -- --fix",
+    "lint": "eslint --config eslint.config.mjs --max-warnings=0 .",
     "lint:tsc": "tsc --noEmit",
-    "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test": "vitest",
+    "test:watch": "vitest --watch"
   },
-  "importSort": {
-    ".ts, .tsx": {
-      "parser": "typescript",
-      "style": "module-scoped"
-    }
-  },
-  "eslintIgnore": [
-    "/**/*.js"
-  ],
   "dependencies": {
-    "@types/jest": "26.0.15",
-    "@types/node": "14.14.3",
-    "@typescript-eslint/eslint-plugin": "4.5.0",
-    "@typescript-eslint/parser": "4.5.0",
-    "eslint": "7.12.0",
-    "eslint-config-prettier": "6.14.0",
-    "eslint-plugin-prettier": "3.1.4",
-    "import-sort": "6.0.0",
-    "import-sort-cli": "6.0.0",
-    "import-sort-parser-typescript": "6.0.0",
-    "import-sort-style-module-scoped": "1.0.3",
-    "jest": "26.6.1",
-    "prettier": "2.1.2",
-    "prettier-plugin-import-sort": "0.0.6",
-    "ts-jest": "26.4.2",
-    "ts-node": "9.0.0",
-    "typescript": "4.0.3"
+    "@eslint/js": "9.20.0",
+    "@types/eslint__js": "^8.42.3",
+    "@types/node": "^18.19.76",
+    "@vitest/coverage-v8": "^2.1.9",
+    "eslint": "9.20.1",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-import-x": "^4.6.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "prettier": "^3.5.1",
+    "tsx": "^4.19.2",
+    "typescript": "~5.3.3",
+    "typescript-eslint": "^8.24.0",
+    "vitest": "^2.1.9"
   }
 }
