--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "type": "module",
   "author": "danitt <dan@staykind.io>",
   "engines": {
-    "node": ">=18.20.4 <19",
-    "npm": ">=10"
+    "node": ">=22.14.0 <23",
+    "npm": ">=10.9.2 <11"
   },
   "repository": {
     "type": "git",
@@ -25,20 +25,19 @@
     "test:watch": "vitest --watch"
   },
   "dependencies": {
-    "@eslint/js": "9.20.0",
-    "@types/eslint__js": "^8.42.3",
-    "@types/node": "^18.19.76",
-    "@vitest/coverage-v8": "^2.1.9",
-    "eslint": "9.20.1",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-import-resolver-typescript": "^3.7.0",
-    "eslint-plugin-import-x": "^4.6.1",
-    "eslint-plugin-prettier": "^5.2.3",
+    "@eslint/js": "9.25.0",
+    "@types/node": "^22.14.1",
+    "@vitest/coverage-v8": "^3.1.1",
+    "eslint": "9.25.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-import-resolver-typescript": "^4.3.2",
+    "eslint-plugin-import-x": "^4.10.5",
+    "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "prettier": "^3.5.1",
-    "tsx": "^4.19.2",
+    "prettier": "^3.5.3",
+    "tsx": "^4.19.3",
     "typescript": "~5.3.3",
-    "typescript-eslint": "^8.24.0",
-    "vitest": "^2.1.9"
+    "typescript-eslint": "^8.30.1",
+    "vitest": "^3.1.1"
   }
 }
